// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`handles arrays 1`] = `
"const arr = [first, second];
export const one = arr[0];
export const another = [arr, two, 2 + 4 + five()];
export const __linariaPreval = [];"
`;

exports[`handles function declaration 1`] = `
"export const nine = 4 + five();
export const __linariaPreval = [];"
`;

exports[`keeps objects as is 1`] = `
"const fill1 = (top = 0, left = 0, right = 0, bottom = 0) => ({
  position: 'absolute',
  top,
  right,
  bottom,
  left
});

const fill2 = (top = 0, left = 0, right = 0, bottom = 0) => {
  return {
    position: 'absolute',
    top,
    right,
    bottom,
    left
  };
};

const _linariaWrap = fn => {
  try {
    return fn();
  } catch (e) {
    return e;
  }
};

export const __linariaPreval = [_linariaWrap(() => fill1), _linariaWrap(() => fill2)];"
`;

exports[`keeps only code which is related to \`a\` 1`] = `
"const {
  whiteColor: color,
  anotherColor
} = require('…');

const a = color || anotherColor;
color.green = '#0f0';

const _linariaWrap = fn => {
  try {
    return fn();
  } catch (e) {
    return e;
  }
};

export const __linariaPreval = [_linariaWrap(() => a)];"
`;

exports[`keeps only code which is related to \`anotherColor\` 1`] = `
"const {
  anotherColor
} = require('…');

const _linariaWrap = fn => {
  try {
    return fn();
  } catch (e) {
    return e;
  }
};

export const __linariaPreval = [_linariaWrap(() => anotherColor)];"
`;

exports[`keeps only code which is related to \`color\` 1`] = `
"const {
  whiteColor: color
} = require('…');

color.green = '#0f0';

const _linariaWrap = fn => {
  try {
    return fn();
  } catch (e) {
    return e;
  }
};

export const __linariaPreval = [_linariaWrap(() => color)];"
`;

exports[`keeps undefined definitions 1`] = `
"const {
  styled
} = require('../react');

let fontSize;
export const Title = styled.h1\`
  font-size: \${fontSize};
\`;

const _linariaWrap = fn => {
  try {
    return fn();
  } catch (e) {
    return e;
  }
};

export const __linariaPreval = [_linariaWrap(() => fontSize)];"
`;

exports[`shakes export assignments 1`] = `
"const {
  styled
} = require('../react');

let fontSize;
export const Title = styled.h1\`
  font-size: \${fontSize};
\`;
export const __linariaPreval = [];"
`;

exports[`shakes export declaration 1`] = `
"const a = 42;
export function shakeMe(favorite) {
  if (favorite) {
    return 'the color is ' + a;
  }

  return 'no favorite color';
}
export const __linariaPreval = [];"
`;

exports[`shakes export functions 1`] = `
"import { whiteColor as color, anotherColor } from '…';
export const a = color;
export { anotherColor as green };
export default async function now() {}
export function shakeMe(favorite) {
  if (favorite) {
    return 'the color is ' + a;
  }

  return 'no favorite color';
}

const _linariaWrap = fn => {
  try {
    return fn();
  } catch (e) {
    return e;
  }
};

export const __linariaPreval = [_linariaWrap(() => a)];"
`;

exports[`shakes exports 1`] = `
"import { whiteColor as color, anotherColor } from '…';
export const a = color;
export { anotherColor };

const _linariaWrap = fn => {
  try {
    return fn();
  } catch (e) {
    return e;
  }
};

export const __linariaPreval = [_linariaWrap(() => a)];"
`;

exports[`shakes imports 1`] = `
"import { whiteColor as color } from '…';
import defaultColor from '…';
export default color;

const _linariaWrap = fn => {
  try {
    return fn();
  } catch (e) {
    return e;
  }
};

export const __linariaPreval = [_linariaWrap(() => color), _linariaWrap(() => defaultColor)];"
`;

exports[`shakes sequence expression 1`] = `
"const color1 = (() => 'blue');
let local = '';
const color2 = (local = color1(), () => local);

const _linariaWrap = fn => {
  try {
    return fn();
  } catch (e) {
    return e;
  }
};

export const __linariaPreval = [_linariaWrap(() => color2)];"
`;

exports[`should keep member expression key 1`] = `
"const key = 'blue';
const obj = {
  blue: '#00F'
};
const blue = obj[key];

const _linariaWrap = fn => {
  try {
    return fn();
  } catch (e) {
    return e;
  }
};

export const __linariaPreval = [_linariaWrap(() => blue)];"
`;

exports[`should throw away any side effects 1`] = `
"const objects = {
  key: {
    fontSize: 12
  }
};

const foo = k => {
  const obj = objects[k];
  return obj;
};

const _linariaWrap = fn => {
  try {
    return fn();
  } catch (e) {
    return e;
  }
};

export const __linariaPreval = [_linariaWrap(() => foo)];"
`;
